# note

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
templates/: .en_latexmkrc  .indentconfig.yaml  .ja_latexmkrc  README.md  user-settings.yaml
templates/bib/: note.bib  template.bib
templates/ja/bib/: test2.bib
templates/ja/ja-project/: .latexmkrc
templates/ja/ja_project/src/: test2.tex
templates/ja/src/: note.tex
templates/ja/src/section/: test3.tex
templates/src/: en_note.tex  en_template.tex  ja_note.tex  ja_template.tex
